--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,10 @@
-<h1>
-	About page
-</h1>
+<div class="row">
+    <div class="col-lg-12 text-center">
+        <h1>About Us</h1>
+        <p class="lead">Test Text</p>
+        <ul class="list-unstyled">
+            <li>List Item</li>
+            <li>List Item 2</li>
+        </ul>
+    </div>
+</div>
