--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,19 @@
-<h1>
-	Home page
-</h1>
+<div class="row">
+  <div class="col-lg-8">
+
+        <!-- Blog Post -->
+
+        <!-- Title -->
+<div class="jumbotron">
+  <h1>Welcome to Steve's Articles.  </h1>
+  <p>Awesome applications built with Rails!</p>
+  <p></p>
+</div>
+
+       
+
+
+
+</div>
+
+</div>
