--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -45,6 +45,7 @@
 
 
       <ul class="nav navbar-nav navbar-right">
+
         <% if current_user %>
           <li><%= link_to "My profile", edit_user_registration_path %></li>
           <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
@@ -52,6 +53,7 @@
           <li><%= link_to "Sign up", new_user_registration_path %></li>
           <li><%= link_to "Sign in", new_user_session_path %></li>
         <% end %>
+        <li><%= link_to "Create Article", new_article_path %></li>
         <li><%= link_to "About us", "/pages/about" %></li>
         <li><%= link_to "Contact us", "/pages/contact" if !current_user %></li>
 
