--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -26,7 +26,7 @@
         <div class="well">
           <h4>Recent Posts</h4>
             <% @articles.each do |a| %>
-             
+              Created by: <%= a.user.username %><br>
               <strong><%= link_to a.title, a %></strong>
               <p><%= truncate(a.body) %></p>
             <% end %>
