--- a/app/views/layouts/_foot.html.erb
+++ b/app/views/layouts/_foot.html.erb
@@ -2,7 +2,7 @@
 <% if current_user %>
 
 
-<footer class="footer-distributed">
+<footer class="footer-distributed navbar-fixed-bottom">
 
 	<div class="footer-left"> 
 		<h3>Company<span>logo</span></h3> 
