--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
         <!-- Title -->
 <div class="jumbotron">
   <h1>Future app.  </h1>
-  <p>Awesome applications built with Rails!</p>
+  <p>Awesome applications built as the standard to work from</p>
   <p></p>
 </div>
 
