--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -2,6 +2,6 @@
 <%= simple_form_for ([@article, @article.comments.build]) do |f| %> 
 
 <%= f.input :body %>
-<%= f.submit "Post your comment" %>
+<%= f.submit "Submit comment" %>
 
 <% end %>
